// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index does show employer information when employerShowSelfRegistrationForm is true 1`] = `
<Fragment>
  <div
    className="maxw-desktop"
  >
    <Title
      seoTitle="Massachusetts Paid Family and Medical Leave"
    >
      <Trans
        components={
          Object {
            "mass-paid-leave-link": <a
              href="https://www.mass.gov/topics/paid-family-and-medical-leave-in-massachusetts"
              rel="noopener"
              target="_blank"
            />,
          }
        }
        i18nKey="pages.index.title"
      />
    </Title>
  </div>
  <div
    className="margin-top-6 measure-7"
  >
    <Heading
      level="2"
    >
      Create an account
    </Heading>
    <div
      className="grid-row grid-gap"
    >
      <article
        className="grid-col-12 mobile-lg:grid-col margin-bottom-3"
      >
        <div
          className="bg-base-lightest padding-3"
        >
          <Heading
            level="3"
          >
            Workers
          </Heading>
          <p>
            You can now apply for Paid Family and Medical Leave.
          </p>
          <ButtonLink
            className="margin-top-3"
            href="/create-account"
          >
            Create an account
          </ButtonLink>
          <div
            className="margin-top-2 text-dark text-bold"
          >
            Have an account?
            <Link
              href="/login"
            >
              <a
                className="display-inline-block margin-left-1"
              >
                Log in
              </a>
            </Link>
          </div>
        </div>
      </article>
      <article
        className="grid-col-12 mobile-lg:grid-col"
      >
        <div
          className="bg-base-lightest padding-3"
        >
          <Heading
            level="3"
          >
            Employers
          </Heading>
          <p>
            Register now so you can manage leave for your team.
          </p>
          <ButtonLink
            className="margin-top-3"
            href="/employers/create-account"
          >
            Create an employer account
          </ButtonLink>
          <div
            className="margin-top-2 text-dark text-bold"
          >
            Have an account?
            <Link
              href="/login"
            >
              <a
                className="display-inline-block margin-left-1"
              >
                Log in
              </a>
            </Link>
          </div>
        </div>
      </article>
    </div>
  </div>
</Fragment>
`;

exports[`Index does show employer information when employerShowSelfRegistrationForm is true 2`] = `
Array [
  "Massachusetts workers can now apply for Paid Family and Medical Leave. Learn more about this ",
  <a
    href="https://www.mass.gov/topics/paid-family-and-medical-leave-in-massachusetts"
    key="1"
    rel="noopener"
    target="_blank"
  >
    new paid leave program
  </a>,
  ".",
]
`;

exports[`Index renders landing page content 1`] = `
<Fragment>
  <div
    className="maxw-desktop"
  >
    <Title
      seoTitle="Massachusetts Paid Family and Medical Leave"
    >
      <Trans
        components={
          Object {
            "mass-paid-leave-link": <a
              href="https://www.mass.gov/topics/paid-family-and-medical-leave-in-massachusetts"
              rel="noopener"
              target="_blank"
            />,
          }
        }
        i18nKey="pages.index.title"
      />
    </Title>
  </div>
  <div
    className="margin-top-6 measure-7"
  >
    <Heading
      level="2"
    >
      Create an account
    </Heading>
    <div
      className="grid-row grid-gap"
    >
      <article
        className="grid-col-12 mobile-lg:grid-col margin-bottom-3"
      >
        <div
          className="bg-base-lightest padding-3"
        >
          <Heading
            level="3"
          >
            Workers
          </Heading>
          <p>
            You can now apply for Paid Family and Medical Leave.
          </p>
          <ButtonLink
            className="margin-top-3"
            href="/create-account"
          >
            Create an account
          </ButtonLink>
          <div
            className="margin-top-2 text-dark text-bold"
          >
            Have an account?
            <Link
              href="/login"
            >
              <a
                className="display-inline-block margin-left-1"
              >
                Log in
              </a>
            </Link>
          </div>
        </div>
      </article>
      <article
        className="grid-col-12 mobile-lg:grid-col"
      >
        <div
          className="bg-base-lightest padding-3"
        >
          <Heading
            level="3"
          >
            Employers
          </Heading>
          <p>
            Are you a Massachusetts employer?
            <br />
            <Trans
              components={
                Object {
                  "contact-center-phone-link": <a
                    href="tel:(833) 344‑7365"
                  />,
                }
              }
              i18nKey="pages.index.employerCardBody_contactCenter"
            />
          </p>
        </div>
      </article>
    </div>
  </div>
</Fragment>
`;

exports[`Index renders landing page content 2`] = `
Array [
  "Massachusetts workers can now apply for Paid Family and Medical Leave. Learn more about this ",
  <a
    href="https://www.mass.gov/topics/paid-family-and-medical-leave-in-massachusetts"
    key="1"
    rel="noopener"
    target="_blank"
  >
    new paid leave program
  </a>,
  ".",
]
`;

exports[`Index renders landing page content 3`] = `
Array [
  "Call ",
  <a
    href="tel:(833) 344‑7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  " to create an employer account.",
]
`;
